# sql_agent

./: .env  README.md  app.py  prompts.jsonl  pyproject.toml  salaries.db  sqlagent.ipynb
