[tool.poetry]
name = "sqlagent"
version = "0.1.0"
description = ""
authors = ["riddhihalade <haladeriddhi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
langchain-core = "^0.2.28"
langchain-community = "^0.2.11"
langchain-groq = "^0.1.9"
langchain-experimental = "^0.0.64"
crewai = {extras = ["tools"], version = "^0.41.1"}
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
